fixed global spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,3 @@
 :host{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: wrap;   
 }
